// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`viewManager/PUS140View/Components/View/PUS140View PUS140View :: render snapshot 1`] = `
<div
  className="pus140 h100 posRelative"
>
  <div
    className="flex h100"
  >
    <div
      className="renderErrorText"
    >
      Unable to render view 
      <br />
      Please fill-in configuration
    </div>
  </div>
</div>
`;

exports[`viewManager/PUS140View/Components/View/PUS140View PUS140View :: renderInvald snapshot 1`] = `
<div
  className="pus140 h100 posRelative"
>
  <div
    className="flex h100"
  >
    <div
      className="renderErrorText"
    >
      Unable to render view 
      <br />
      this is an error message
    </div>
  </div>
</div>
`;
